// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button style params borderRadius large 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_large QxButton QxButton_size_medium css-v0k52e-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-borderRadius-large"
    type="button"
  >
    <div
      class="QxButton-content css-m3eosc-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params borderRadius max 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_max QxButton QxButton_size_medium css-1uhzml3-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-borderRadius-max"
    type="button"
  >
    <div
      class="QxButton-content css-m3eosc-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params borderRadius medium 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-xf29is-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-borderRadius-medium"
    type="button"
  >
    <div
      class="QxButton-content css-m3eosc-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params borderRadius small 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_small QxButton QxButton_size_medium css-irifgu-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-borderRadius-small"
    type="button"
  >
    <div
      class="QxButton-content css-m3eosc-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params borderRadius xLarge 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_xLarge QxButton QxButton_size_medium css-7af60g-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-borderRadius-xLarge"
    type="button"
  >
    <div
      class="QxButton-content css-m3eosc-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params borderRadius xSmall 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_xSmall QxButton QxButton_size_medium css-1q19eh3-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-borderRadius-xSmall"
    type="button"
  >
    <div
      class="QxButton-content css-m3eosc-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params color brand 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-xf29is-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-color-brand"
    type="button"
  >
    <div
      class="QxButton-content css-m3eosc-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params color danger 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_danger QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-1s8avop-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-color-danger"
    type="button"
  >
    <div
      class="QxButton-content css-m3eosc-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params color info 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_info QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-c11cza-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-color-info"
    type="button"
  >
    <div
      class="QxButton-content css-m3eosc-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params color secondary 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_secondary QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-2ejju1-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-color-secondary"
    type="button"
  >
    <div
      class="QxButton-content css-m3eosc-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params color success 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_success QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-zvyu5w-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-color-success"
    type="button"
  >
    <div
      class="QxButton-content css-m3eosc-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params color warning 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_warning QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-1ts9iyx-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-color-warning"
    type="button"
  >
    <div
      class="QxButton-content css-m3eosc-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params loading false 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-xf29is-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-loading-false"
    type="button"
  >
    <div
      class="QxButton-content css-m3eosc-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params loading true 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxBaseButton_loading QxButton QxButton_size_medium QxButton_loading css-5l479g-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-loading-true"
    disabled=""
    type="button"
  >
    <div
      class="QxButton-content css-11blzq7-QxButton-content"
    >
      Button
    </div>
    <div
      class="QxLoader QxLoader_size_medium QxBaseButton-loader css-uhsai0-QxLoader-root-QxBaseButton-loader"
    >
      <div
        class="QxLoader-dot css-1c9k1a7-QxLoader-dot"
      />
      <div
        class="QxLoader-dot css-1c9k1a7-QxLoader-dot"
      />
      <div
        class="QxLoader-dot css-1c9k1a7-QxLoader-dot"
      />
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params size large 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_large QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_large css-lnw46y-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-size-large"
    type="button"
  >
    <div
      class="QxButton-content css-m3eosc-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params size medium 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-xf29is-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-size-medium"
    type="button"
  >
    <div
      class="QxButton-content css-m3eosc-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params size small 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_small QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_small css-7g7b21-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-size-small"
    type="button"
  >
    <div
      class="QxButton-content css-59e1j2-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params size xSmall 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_xSmall QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_xSmall css-17m5330-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-size-xSmall"
    type="button"
  >
    <div
      class="QxButton-content css-m3eosc-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params type contained 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-xf29is-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-type-contained"
    type="button"
  >
    <div
      class="QxButton-content css-m3eosc-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params type outlined 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_outlined QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-mx96a7-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-type-outlined"
    type="button"
  >
    <div
      class="QxButton-content css-m3eosc-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params type text 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_text QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-5orh4g-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-type-text"
    type="button"
  >
    <div
      class="QxButton-content css-m3eosc-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params borderRadius large 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_large QxIconButton QxIconButton_size_medium css-1p8yx8h-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-borderRadius-large"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params borderRadius max 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_max QxIconButton QxIconButton_size_medium css-r8upnz-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-borderRadius-max"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params borderRadius medium 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1d91wqo-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-borderRadius-medium"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params borderRadius small 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_small QxIconButton QxIconButton_size_medium css-1gu38rb-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-borderRadius-small"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params borderRadius xLarge 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_xLarge QxIconButton QxIconButton_size_medium css-nbpalj-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-borderRadius-xLarge"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params borderRadius xSmall 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_xSmall QxIconButton QxIconButton_size_medium css-vqc25z-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-borderRadius-xSmall"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params color brand 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1d91wqo-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-color-brand"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params color danger 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_danger QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1aordo9-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-color-danger"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params color info 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_info QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1w1fc8z-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-color-info"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params color secondary 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_secondary QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-16y7zyj-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-color-secondary"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params color success 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_success QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-we3lgt-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-color-success"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params color warning 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_warning QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-urysa0-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-color-warning"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params loading false 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1d91wqo-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-loading-false"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params loading true 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxBaseButton_loading QxIconButton QxIconButton_size_medium QxIconButton_loading css-9awhez-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-loading-true"
    disabled=""
    type="button"
  >
    <div
      class="QxIconButton-icon css-1nc6511-QxIconButton-icon"
    >
      Button
    </div>
    <div
      class="QxLoader QxLoader_size_medium QxBaseButton-loader css-uhsai0-QxLoader-root-QxBaseButton-loader"
    >
      <div
        class="QxLoader-dot css-1c9k1a7-QxLoader-dot"
      />
      <div
        class="QxLoader-dot css-1c9k1a7-QxLoader-dot"
      />
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params size large 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_large QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_large css-1ayn32u-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-size-large"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params size medium 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1d91wqo-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-size-medium"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params size small 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_small QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_small css-v3zwcb-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-size-small"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params size xSmall 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_xSmall QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_xSmall css-1bld30r-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-size-xSmall"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params type contained 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1d91wqo-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-type-contained"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params type outlined 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_outlined QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1rla9lu-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-type-outlined"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params type text 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_text QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-9scsfy-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-type-text"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;
